@@ -6,17 +6,15 @@ import com.ispf.core.model.FieldType;
 import com.ispf.driver.DeviceDriver;
 import com.ispf.driver.DriverException;
 import com.ispf.driver.DriverMetadata;
-import org.openmuc.jmbus.MBusConnection;
-import org.openmuc.jmbus.VariableDataStructure;
+import com.ispf.driver.mbus.codec.MbusTcpClient;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Locale;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
- * M-Bus driver — reads meter registers via jMBus (serial or TCP).
+ * M-Bus driver — reads meter registers via the ISPF clean-room TCP codec.
  */
 public class MbusDeviceDriver implements DeviceDriver {
 
@@ -30,13 +28,14 @@ public class MbusDeviceDriver implements DeviceDriver {
             "mbus",
             "M-Bus Driver",
             "0.1.0",
-            "Reads M-Bus meter registers over serial or TCP using jMBus",
+            "Reads M-Bus meter registers over TCP using the ISPF codec",
             "ISPF",
             Map.of(
                     "connectionType", "tcp",
                     "host", "127.0.0.1",
                     "port", "10001",
-                    "serialPort", "/dev/ttyUSB0"
+                    "serialPort", "/dev/ttyUSB0",
+                    "timeoutMs", "3000"
             )
     );
 
@@ -45,7 +44,8 @@ public class MbusDeviceDriver implements DeviceDriver {
     private String host = "127.0.0.1";
     private int port = 10001;
     private String serialPort = "/dev/ttyUSB0";
-    private MBusConnection connection;
+    private int timeoutMs = 3000;
+    private MbusTcpClient client;
     private final Map<String, MbusPoint> points = new ConcurrentHashMap<>();
     private volatile boolean connected;
 
@@ -69,21 +69,26 @@ public class MbusDeviceDriver implements DeviceDriver {
             case "host" -> host = value.trim();
             case "port" -> port = Integer.parseInt(value.trim());
             case "serialPort" -> serialPort = value.trim();
+            case "timeoutMs" -> timeoutMs = Integer.parseInt(value.trim());
             default -> { }
         }
     }
 
     @Override
     public void connect() throws DriverException {
+        if ("serial".equals(connectionType)) {
+            throw new DriverException("serial not yet implemented in ISPF codec");
+        }
+        if (!"tcp".equals(connectionType)) {
+            throw new DriverException("Unsupported M-Bus connectionType: " + connectionType);
+        }
         try {
-            if ("serial".equals(connectionType)) {
-                connection = MBusConnection.newSerialBuilder(serialPort).setBaudrate(2400).build();
-            } else {
-                connection = MBusConnection.newTcpBuilder(host, port).build();
-            }
+            client = new MbusTcpClient(host, port, timeoutMs);
+            client.connect();
             connected = true;
-            driverObject.log(DriverLogLevel.INFO, "M-Bus connected (" + connectionType + ")");
+            driverObject.log(DriverLogLevel.INFO, "M-Bus connected (tcp " + host + ":" + port + ")");
         } catch (IOException e) {
+            connected = false;
             throw new DriverException("M-Bus connect failed", e);
         }
     }
@@ -91,19 +96,19 @@ public class MbusDeviceDriver implements DeviceDriver {
     @Override
     public void disconnect() {
         connected = false;
-        if (connection != null) {
+        if (client != null) {
             try {
-                connection.close();
+                client.close();
             } catch (Exception ignored) {
                 // best effort
             }
-            connection = null;
+            client = null;
         }
     }
 
     @Override
     public boolean isConnected() {
-        return connected && connection != null;
+        return connected && client != null && client.isConnected();
     }
 
     @Override
@@ -132,22 +137,20 @@ public class MbusDeviceDriver implements DeviceDriver {
                 driverObject.log(DriverLogLevel.DEBUG,
                         "Secondary address " + point.secondaryAddress() + " configured; using primary 0xFD read");
             }
-            VariableDataStructure response = connection.read(primaryAddress);
+            java.util.List<MbusTcpClient.Record> response = client.read(primaryAddress);
             String value = "";
             String unit = "";
-            for (org.openmuc.jmbus.DataRecord record : response.getDataRecords()) {
-                if (matchesRegister(record, point.register())) {
-                    Object dataValue = record.getDataValue();
-                    value = dataValue == null ? "" : dataValue.toString();
-                    unit = record.getUnit() == null ? "" : String.valueOf(record.getUnit());
+            for (MbusTcpClient.Record record : response) {
+                if (record.matches(point.register())) {
+                    value = record.value();
+                    unit = record.unit();
                     break;
                 }
             }
-            if (value.isEmpty() && !response.getDataRecords().isEmpty()) {
-                org.openmuc.jmbus.DataRecord first = response.getDataRecords().get(0);
-                Object dataValue = first.getDataValue();
-                value = dataValue == null ? "" : dataValue.toString();
-                unit = first.getUnit() == null ? "" : String.valueOf(first.getUnit());
+            if (value.isEmpty() && !response.isEmpty()) {
+                MbusTcpClient.Record first = response.getFirst();
+                value = first.value();
+                unit = first.unit();
             }
             return DataRecord.single(REGISTER_SCHEMA, Map.of(
                     "value", value,
@@ -157,16 +160,5 @@ public class MbusDeviceDriver implements DeviceDriver {
         } catch (Exception e) {
             throw new DriverException("M-Bus read failed for " + point, e);
         }
-    }
-
-    private static boolean matchesRegister(org.openmuc.jmbus.DataRecord record, String register) {
-        String dibVib = Arrays.toString(record.getDib()) + "-" + Arrays.toString(record.getVib());
-        String description = record.getUserDefinedDescription();
-        if (description == null || description.isBlank()) {
-            description = record.getDescription() == null ? "" : record.getDescription().toString();
-        }
-        return register.equalsIgnoreCase(dibVib)
-                || register.equalsIgnoreCase(description)
-                || register.equalsIgnoreCase(String.valueOf(record.getFunctionField()));
     }
 }
